--- a/thatFood/Base.lproj/Main.storyboard
+++ b/thatFood/Base.lproj/Main.storyboard
@@ -18,19 +18,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dWD-rW-utO">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dWD-rW-utO">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aEw-AJ-jlq">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aEw-AJ-jlq">
                                 <rect key="frame" x="76" y="646" width="231" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="p7w-W4-kvj"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="dWD-rW-utO" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="3my-7i-OKO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aEw-AJ-jlq" secondAttribute="trailing" constant="68" id="9dk-eQ-9UH"/>
+                            <constraint firstItem="aEw-AJ-jlq" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="FEC-zN-qs7"/>
+                            <constraint firstItem="dWD-rW-utO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Q4C-WK-NdH"/>
+                            <constraint firstItem="dWD-rW-utO" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="jdl-0e-sCK"/>
+                            <constraint firstItem="dWD-rW-utO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="l82-l5-Fmp"/>
+                            <constraint firstItem="aEw-AJ-jlq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="76" id="rA7-dc-M55"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
