--- a/thatFood/Base.lproj/Main.storyboard
+++ b/thatFood/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Hf2-t3-ogl">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OdP-1M-LQF">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,15 +15,19 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="thatFood" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dWD-rW-utO">
-                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="407"/>
                                 <color key="backgroundColor" red="0.98065394163131714" green="0.53774511814117432" blue="0.57461768388748169" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aEw-AJ-jlq">
-                                <rect key="frame" x="16" y="562" width="343" height="61"/>
+                                <rect key="frame" x="0.0" y="467" width="320" height="57"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="57" id="XtE-HX-5Kc"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="0.99413279249999997" blue="0.97860013239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -32,15 +35,14 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="aEw-AJ-jlq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="QYy-FA-HoE"/>
-                            <constraint firstItem="dWD-rW-utO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="TUw-8q-iRg"/>
-                            <constraint firstItem="aEw-AJ-jlq" firstAttribute="bottom" secondItem="dWD-rW-utO" secondAttribute="bottom" id="bfV-E7-nil"/>
-                            <constraint firstItem="aEw-AJ-jlq" firstAttribute="centerX" secondItem="dWD-rW-utO" secondAttribute="centerX" id="cf6-sN-qi7"/>
-                            <constraint firstItem="aEw-AJ-jlq" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="f8Z-89-l1a"/>
-                            <constraint firstItem="dWD-rW-utO" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="hZd-wS-MZB"/>
-                            <constraint firstItem="dWD-rW-utO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lkm-ZZ-sYQ"/>
-                            <constraint firstItem="aEw-AJ-jlq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="498" id="uLS-Kd-VXb"/>
-                            <constraint firstItem="dWD-rW-utO" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="xpx-ku-mMH"/>
+                            <constraint firstItem="aEw-AJ-jlq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2f1-uK-LId"/>
+                            <constraint firstItem="aEw-AJ-jlq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="403" id="LeP-WI-yZZ"/>
+                            <constraint firstItem="dWD-rW-utO" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="QnG-xq-RR9"/>
+                            <constraint firstItem="aEw-AJ-jlq" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="RyX-JG-2iw"/>
+                            <constraint firstItem="aEw-AJ-jlq" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="m1d-rz-L7H"/>
+                            <constraint firstItem="dWD-rW-utO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rqa-kZ-ckz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dWD-rW-utO" secondAttribute="bottom" constant="53" id="s8N-Zu-HNz"/>
+                            <constraint firstItem="dWD-rW-utO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="t9s-8G-xWg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -60,25 +62,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="263.19999999999999" y="131.78410794602701"/>
+            <point key="canvasLocation" x="660" y="130.98591549295776"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="UU6-9g-Z1V">
+        <scene sceneID="0PB-kl-vI4">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Hf2-t3-ogl" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OdP-1M-LQF" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="s0R-Pi-WTH">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Zkf-0U-MXw">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="uPd-Lh-6Xs"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="pQH-ny-5bc"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="i5l-uj-W6G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UZQ-KG-2GL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-482" y="132"/>
+            <point key="canvasLocation" x="-306" y="113"/>
         </scene>
     </scenes>
 </document>
