--- a/thatFood/Base.lproj/Main.storyboard
+++ b/thatFood/Base.lproj/Main.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OdP-1M-LQF">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -16,11 +15,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="thatFood" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dWD-rW-utO">
-                                <rect key="frame" x="0.0" y="64" width="414" height="628"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="372"/>
                                 <color key="backgroundColor" red="0.98065394163131714" green="0.53774511814117432" blue="0.57461768388748169" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                         </subviews>
@@ -56,21 +55,18 @@
             <objects>
                 <viewController id="Nc5-S1-3GX" customClass="detailViewController" customModule="thatFood" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Zvi-GT-VkU">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dMS-mm-PWK">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="451.33333333333331"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="5" translatesAutoresizingMaskIntoConstraints="NO" id="dMS-mm-PWK">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="348.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="dMS-mm-PWK" secondAttribute="height" multiplier="320:349" id="WXo-nq-BfJ"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HMT-1e-5vt">
-                                <rect key="frame" x="0.0" y="449" width="414" height="287"/>
+                                <rect key="frame" x="0.0" y="357" width="320" height="123"/>
                                 <color key="backgroundColor" red="0.094333536922931671" green="0.090991534292697906" blue="0.028011875227093697" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="HMT-1e-5vt" secondAttribute="height" multiplier="160:111" id="YHp-qF-YhR"/>
-                                </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" red="1" green="0.99413279249999997" blue="0.97860013239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
@@ -79,19 +75,20 @@
                         </subviews>
                         <color key="backgroundColor" red="0.6705882352941176" green="0.74509803921568629" blue="0.87450980392156863" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="HMT-1e-5vt" firstAttribute="trailing" secondItem="qG8-ES-mYa" secondAttribute="trailing" id="SLF-Pf-6pT"/>
+                            <constraint firstItem="HMT-1e-5vt" firstAttribute="leading" secondItem="qG8-ES-mYa" secondAttribute="leading" id="0l6-Pa-A9a"/>
+                            <constraint firstItem="HMT-1e-5vt" firstAttribute="bottom" secondItem="qG8-ES-mYa" secondAttribute="bottom" id="Z5Y-ML-BAY"/>
                             <constraint firstItem="dMS-mm-PWK" firstAttribute="leading" secondItem="qG8-ES-mYa" secondAttribute="leading" id="ayt-W0-RJ6"/>
                             <constraint firstItem="dMS-mm-PWK" firstAttribute="trailing" secondItem="qG8-ES-mYa" secondAttribute="trailing" id="ecx-it-FvF"/>
+                            <constraint firstItem="HMT-1e-5vt" firstAttribute="trailing" secondItem="qG8-ES-mYa" secondAttribute="trailing" id="fT6-c7-mBb"/>
                             <constraint firstItem="dMS-mm-PWK" firstAttribute="top" secondItem="Zvi-GT-VkU" secondAttribute="top" id="h8N-bX-4n2"/>
-                            <constraint firstItem="HMT-1e-5vt" firstAttribute="bottom" secondItem="qG8-ES-mYa" secondAttribute="bottom" id="lXB-s9-N7U"/>
-                            <constraint firstItem="HMT-1e-5vt" firstAttribute="leading" secondItem="qG8-ES-mYa" secondAttribute="leading" id="lw1-7f-3VK"/>
+                            <constraint firstItem="HMT-1e-5vt" firstAttribute="top" secondItem="dMS-mm-PWK" secondAttribute="bottom" constant="8.3333333333333144" id="sBw-Ia-VJt"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qG8-ES-mYa"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UDi-Dl-Glt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1440" y="133.09859154929578"/>
+            <point key="canvasLocation" x="1439.2" y="133.00492610837438"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0PB-kl-vI4">
@@ -99,7 +96,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OdP-1M-LQF" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Zkf-0U-MXw">
-                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -112,4 +109,7 @@
             <point key="canvasLocation" x="-306" y="113"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="5" width="2560" height="1600"/>
+    </resources>
 </document>
